--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -1,5 +1,125 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
+
+@ARTICLE{BucheteHummer,
+  author = {Buchete, Nicaolae V. and Hummer, Gerhard},
+  title = {Coarse Master Equations for Peptide Folding Dynamics},
+  journal = {J. Phys. Chem. B},
+  year = {2008},
+  volume = {112},
+  pages = {6057--6069}
+}
+
+@ARTICLE{PCCAplus,
+  author = {P. Deuflhard and M. Weber},
+  title = {Robust {P}erron cluster analysis in conformation dynamics},
+  journal = {Linear Algebra and its Applications},
+  year = {2005},
+  volume = {161},
+  number = {184},
+  note = {398 Special issue on matrices and mathematical biology}
+}
+
+
+@article{PNAS09,
+	Author = {F. No\'{e} and C. Sch\"utte and E. Vanden-Eijnden and L. Reich and T. R. Weikl},
+	Journal = {Proc. Natl. Acad. Sci. USA},
+	Pages = {19011-19016},
+	Title = {Constructing the Full Ensemble of Folding Pathways from Short Off-Equilibrium Simulations},
+	Volume = {106},
+	Year = {2009}}
+
+@article{PrinzHeldSmithNoe_Committorprep,
+	Author = {Jan-Hendrik Prinz and Martin Held and Jeremy C. Smith and Frank No{\'e}},
+	Date-Modified = {2012-01-20 11:23:53 +0100},
+	Journal = {SIAM Multiscale Model. Simul.},
+	Pages = {545},
+	Title = {Efficient Computation of Committor Probabilities and Transition State Ensembles},
+	Volume = {9},
+	Year = {2011}}
+
+@article{PrinzKellerNoe_PCCP11_Perspective,
+	Author = {Jan-Hendrik Prinz and Bettina G. Keller and Frank No{\'e}},
+	Date-Added = {2011-08-01 21:03:59 +0200},
+	Date-Modified = {2014-06-13 00:52:12 +0000},
+	Journal = {Phys. Chem. Chem. Phys.},
+	Pages = {16912-16927},
+	Title = {Probing molecular kinetics with {{{Markov}}} models: Metastable states, transition pathways and spectroscopic observables},
+	Volume = {13},
+	Year = {2011}}
+
+@article{A19-49,
+	Author = {M. Senne and B. Trendelkamp-Schroer and A. S. J. S. Mey and Ch. Sch\"utte and F. No\'e},
+	Date-Modified = {2014-06-13 00:50:23 +0000},
+	Journal = {J. Chem. Theory Comput. },
+	Pages = {2223--2238},
+	Title = {EMMA - A software package for {{Markov}} model building and analysis},
+	Url = {http://publications.mi.fu-berlin.de/1124/},
+	Volume = {8},
+	Year = {2012},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1124/}}
+
+@article{A19-39,
+	Author = {B. G. Keller and J.-H. Prinz and F. No\'e},
+	Date-Modified = {2014-06-13 00:51:13 +0000},
+	Journal = {Chem. Phys.},
+	Pages = {92--107},
+	Title = {{{Markov}} models and dynamical fingerprints: {U}nraveling the complexity of molecular kinetics},
+	Url = {http://publications.mi.fu-berlin.de/1068/},
+	Volume = {396},
+	Year = {2012},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1068/}}
+
+@book{A19-31,
+	Author = {Ch. Sch\"utte and M. Sarich},
+	Month = {December},
+	Publisher = {American Mathematical Society},
+	Series = {Courant Lecture Notes},
+	Title = {Metastability and {{Markov}} State Models in Molecular Dynamics: Modeling, Analysis, Algorithmic Approaches},
+	Url = {http://publications.mi.fu-berlin.de/1304/},
+	Volume = {24},
+	Year = {2013},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1304/}}
+
+@article{A19-29,
+	Author = {M. Sarich and Ralf Banisch and C. Hartmann and Ch. Sch\"utte},
+	Journal = {Entropy (Special Issue)},
+	Month = {December},
+	Number = {1},
+	Pages = {258--286},
+	Publisher = {MDPI - Open Access Publishing},
+	Title = {{{Markov}} State Models for Rare Events in Molecular Dynamics},
+	Url = {http://publications.mi.fu-berlin.de/1300/},
+	Volume = {16},
+	Year = {2013},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1300/}}
+
+@article{A19-ZIB18,
+	Author = {Ch. Sch\"utte and A. Nielsen and M. Weber},
+	Journal = {to appear in Molecular Physics},
+	Title = {{{Markov}} State Models and Molecular Alchemy},
+	Year = {2014}}
+
+@book{A19-1,
+	Editor = {G. R. Bowman and V. S. Pande and F. No\'e},
+	Publisher = {Springer},
+	Series = {Advances in Experimental Medicine and Biology},
+	Title = {An Introduction to {{Markov}} State Models and Their Application to Long Timescale Molecular Simulation},
+	Url = {http://publications.mi.fu-berlin.de/1360/},
+	Volume = {797},
+	Year = {2014},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1360/}}
+
+@article{A19-26,
+	Author = {F. No\'e and H. Wu and J.-H. Prinz and N. Plattner},
+	Journal = {J. Chem. Phys.},
+	Pages = {184114},
+	Title = {Projected and Hidden {{Markov}} Models for calculating kinetics and metastable states of complex molecules},
+	Url = {http://publications.mi.fu-berlin.de/1320/},
+	Volume = {139},
+	Year = {2013},
+	Bdsk-Url-1 = {http://publications.mi.fu-berlin.de/1320/}}
+
 @article{latorre2011structure,
   title={A structure-preserving numerical discretization of reversible diffusions},
   author={Latorre, Juan C and Metzner, Philipp and Hartmann, Carsten and Sch{\"u}tte, Christof},
@@ -11,7 +131,7 @@
 }
 
 @article{sarich2010approximation,
-  title={On the approximation quality of Markov state models},
+  title={On the approximation quality of {Markov} state models},
   author={Sarich, Marco and No{\'e}, Frank and Sch{\"u}tte, Christof},
   journal={Multiscale Modeling \& Simulation},
   volume={8},
@@ -23,16 +143,16 @@
 
 @article{sarich2014utilizing,
   title={Utilizing hitting times for finding
-  metastable sets in non-reversible Markov chains},
+  metastable sets in non-reversible {Markov} chains},
   author={Sarich, Marco and Sch{\"u}tte, Christof},
-  journal={submitted},
+  journal={submitted to the Journal of Computational Dynamics},
   year={2014}
 }
 
 
 @article{wang2014exploring,
   title={Exploring the conformational dynamics of alanine dipeptide in solution subjected to an external electric field: A nonequilibrium molecular dynamics simulation},
-  author={Wang, Han and Schütte, Christof and Ciccotti, Giovanni and Delle Site, Luigi},
+  author={Wang, Han and Sch{\"u}tte, Christof and Ciccotti, Giovanni and Delle Site, Luigi},
   journal={Journal of Chemical Theory and Computation},
   volume={10},
   number={4},
@@ -562,7 +682,7 @@ year  = {2013},
 
 @ARTICLE{baiesi2010nonequilibrium2,
   author = {Baiesi, M. and Boksenbojm, E. and Maes, C. and Wynants, B.},
-  title = {Nonequilibrium linear response for Markov dynamics, II: Inertial
+  title = {Nonequilibrium linear response for {Markov} dynamics, II: Inertial
 	dynamics},
   journal = {Journal of statistical physics},
   year = {2010},
@@ -612,7 +732,7 @@ year  = {2013},
 
 @ARTICLE{baiesi2009nonequilibrium1,
   author = {Baiesi, M. and Maes, C. and Wynants, B.},
-  title = {Nonequilibrium linear response for Markov dynamics, I: jump processes
+  title = {Nonequilibrium linear response for {Markov} dynamics, I: jump processes
 	and overdamped diffusions},
   journal = {Journal of statistical physics},
   year = {2009},
@@ -737,7 +857,7 @@ year  = {2013},
 
 @ARTICLE{bowman2012improved,
   author = {Bowman, G.R.},
-  title = {Improved coarse-graining of Markov state models via explicit consideration
+  title = {Improved coarse-graining of {Markov} state models via explicit consideration
 	of statistical uncertainty},
   journal = {J. Chem. Phys.},
   year = {2012},
@@ -776,7 +896,7 @@ year  = {2013},
 @ARTICLE{pronk2013gromacs,
   author = {Pronk, S. and P{\'a}ll, S. and Schulz, R. and Larsson, P. and Bjelkmar,
 	P. and Apostolov, R. and Shirts, M.R. and Smith, J.C. and Kasson,
-	P.M. and van der Spoel, D. and Hess B. Lindahl E.},
+	P.M. and van der Spoel, D. and Hess B. and Lindahl E.},
   title = {GROMACS 4.5: a high-throughput and highly parallel open source molecular
 	simulation toolkit},
   journal = {Bioinformatics},
@@ -963,7 +1083,7 @@ year  = {2013},
   author = {Chodera, J.D. and Singhal, N. and Pande, V.S. and Dill, K.A. and
 	Swope, W.C.},
   title = {Automatic discovery of metastable states for the construction of
-	Markov models of macromolecular conformational dynamics},
+	{Markov} models of macromolecular conformational dynamics},
   journal = {J. Chem. Phys.},
   year = {2007},
   volume = {126},
@@ -1242,15 +1362,22 @@ year  = {2013},
   timestamp = {2013.01.10}
 }
 
+@ARTICLE{MSMBuilder,
+  author = {Kyle A Beauchamp and Gregory R Bowman andThomas J Lane and Lutz Maibaum and Imran S Haque and Vijay S Pande},
+  title = {{MSMBuilder2}: {M}odeling Conformational Dynamics at the Picosecond to Millisecond Scale},
+  journal = {J Chem Theor Comput},
+  year = {2011}
+}
+
 
 @INPROCEEDINGS{djurdjevac2010markov,
-  author = {Djurdjevac, N. and Sarich, M. and Sch{\\"u}tte, C.},
-  title = {On Markov state models for metastable processes},
+  author = {Djurdjevac, N. and Sarich, M. and Sch{\"u}tte, C.},
+  title = {On {{Markov}} state models for metastable processes},
   booktitle = {Proceedings of the International Congress of Mathematicians},
   year = {2010},
   volume = {901},
   pages = {3105--3131},
-  file = {djurdjevac2010markov.pdf:djurdjevac2010markov.pdf:PDF},
+  file = {djurdjevac2010{Markov}.pdf:djurdjevac2010{Markov}.pdf:PDF},
   timestamp = {2011.08.24}
 }
 
@@ -1582,10 +1709,10 @@ year  = {2013},
 
 @ARTICLE{ge2012markov,
   author = {Ge, H. and Pres, S. and Ghosh, K. and Dill, K.},
-  title = {Markov processes follow from the principle of Maximum Caliber},
+  title = {{Markov} processes follow from the principle of Maximum Caliber},
   journal = {Arxiv preprint arXiv:1106.4212},
   year = {2012},
-  file = {ge2012markov.pdf:ge2012markov.pdf:PDF},
+  file = {ge2012{Markov}.pdf:ge2012{Markov}.pdf:PDF},
   timestamp = {2012.02.23}
 }
 
@@ -2655,7 +2782,7 @@ year  = {2013},
 
 @ARTICLE{mcgibbon2013learning,
   author = {McGibbon, Robert Treiman and Pande, Vijay S},
-  title = {Learning Kinetic Distance Metrics for Markov State Models of Protein
+  title = {Learning Kinetic Distance Metrics for {Markov} State Models of Protein
 	Conformational Dynamics},
   journal = {J. Chem. Theory Comput.},
   year = {2013},
@@ -3069,7 +3196,7 @@ year  = {2013},
 
 @ARTICLE{pande2010everything,
   author = {Pande, V.S. and Beauchamp, K. and Bowman, G.R.},
-  title = {Everything you wanted to know about Markov State Models but were
+  title = {Everything you wanted to know about {Markov} State Models but were
 	afraid to ask},
   journal = {Methods},
   year = {2010},
@@ -3437,7 +3564,7 @@ year  = {2013},
   author = {Prinz, J.H. and Chodera, J.D. and Pande, V.S. and Swope, WD and Smith,
 	J.C. and No{\'e}, F.},
   title = {Optimal use of data in parallel tempering simulations for the construction
-	of discrete-state Markov models of biomolecular dynamics},
+	of discrete-state {Markov} models of biomolecular dynamics},
   journal = {J. Chem. Phys.},
   year = {2011},
   volume = {134},
@@ -3450,12 +3577,12 @@ year  = {2013},
 @ARTICLE{prinz2011markov,
   author = {Prinz, J.H. and Wu, H. and Sarich, M. and Keller, B. and Senne, M.
 	and Held, M. and Chodera, J.D. and Sch{\"u}tte, C. and No{\'e}, F.},
-  title = {{Markov models of molecular kinetics: Generation and validation}},
+  title = {{{Markov} models of molecular kinetics: Generation and validation}},
   journal = {J. Chem. Phys.},
   year = {2011},
   volume = {134},
   pages = {174105},
-  file = {prinz2011markov.pdf:prinz2011markov.pdf:PDF;supplement material:prinz2011markov.support.pdf:PDF},
+  file = {prinz2011{Markov}.pdf:prinz2011{Markov}.pdf:PDF;supplement material:prinz2011{Markov}.support.pdf:PDF},
   timestamp = {2012.02.17}
 }
 
@@ -3665,7 +3792,7 @@ year  = {2013},
 
 @ARTICLE{schutte2012optimal,
   author = {Sch{\"u}tte, C. and Winkelmann, S. and Hartmann, C.},
-  title = {Optimal control of molecular dynamics using Markov state models},
+  title = {Optimal control of molecular dynamics using {Markov} state models},
   journal = {Math. Program.},
   year = {2012},
   file = {schutte2012optimal.pdf:schutte2012optimal.pdf:PDF},
@@ -3675,12 +3802,12 @@ year  = {2013},
 @ARTICLE{schuette2011markov,
   author = {Sch{\"u}tte, C. and No{\'e}, F. and Lu, J. and Sarich, M. and Vanden-Eijnden,
 	E.},
-  title = {{Markov State Models based on Milestoning}},
+  title = {{{Markov} State Models based on Milestoning}},
   journal = {J. Chem. Phys.},
   year = 2011,
   volume = 134,
   pages = 204105,
-  file = {schuette2011markov.pdf:schuette2011markov.pdf:PDF},
+  file = {schuette2011{Markov}.pdf:schuette2011{Markov}.pdf:PDF},
   timestamp = {2011.08.24}
 }
 
@@ -3743,7 +3870,7 @@ year  = {2013},
 
 @ARTICLE{schwantes2013improvements,
   author = {Schwantes, C.R. and Pande, V.S.},
-  title = {Improvements in Markov State Model Construction Reveal Many Non-Native
+  title = {Improvements in {Markov} State Model Construction Reveal Many Non-Native
 	Interactions in the Folding of NTL9},
   journal = {J. Chem. Theory Comput.},
   year = {2013},
@@ -3822,7 +3949,7 @@ year  = {2013},
 @ARTICLE{senne2012emma,
   author = {Senne, M. and Trendelkamp-Schroer, B. and Mey, A.S.J.S. and Sch{\"u}tte,
 	C. and No{\'}e, F.},
-  title = {EMMA: A Software Package for Markov Model Building and Analysis},
+  title = {EMMA: A Software Package for {Markov} Model Building and Analysis},
   journal = {J. Chem. Theory Comput.},
   year = {2012},
   volume = {8},
@@ -4579,6 +4706,18 @@ year  = {2013},
   timestamp = {2011.12.05}
 }
 
+
+@article{wang2010optimizing,
+  title={Optimizing working parameters of the smooth particle mesh Ewald algorithm in terms of accuracy and efficiency},
+  author={Wang, Han and Dommert, Florian and Holm, Christian},
+  journal={The Journal of chemical physics},
+  volume={133},
+  number={3},
+  pages={034117},
+  year={2010},
+  publisher={AIP Publishing}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
@@ -4592,9 +4731,9 @@ year  = {2013},
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
 1 ExplicitGroup:MSM\;0\;bowman2012improved\;chodera2011dynamical\;djur
-djevac2010markov\;kreuzer2013catch\;latorre2010free\;mcgibbon2013learn
-ing\;noe2009constructing\;pande2010everything\;prinz2011markov\;prinz2
-011optimal\;schuette2003biomolecular\;schuette2011markov\;schwantes201
+djevac2010{Markov}\;kreuzer2013catch\;latorre2010free\;mcgibbon2013learn
+ing\;noe2009constructing\;pande2010everything\;prinz2011{Markov}\;prinz2
+011optimal\;schuette2003biomolecular\;schuette2011{Markov}\;schwantes201
 3improvements\;senne2012emma\;;
 1 ExplicitGroup:adress\;0\;bulo2009toward\;delgado2009coupling\;delles
 ite2011multiscale\;ensing2007energy\;fisher1964free\;fritsch2012adapti
@@ -4729,12 +4868,12 @@ ing2\;;
 2004biomolecular\;oostenbrink2005validation\;schuler2001improved\;;
 2 ExplicitGroup:model reduction\;0\;hartmann2011two\;legoll2010effecti
 ve\;;
-1 ExplicitGroup:inhomo Markov proc\;0\;;
+1 ExplicitGroup:inhomo {Markov} proc\;0\;;
 2 ExplicitGroup:Oseledets Sets\;0\;froyland2010coherent\;froyland2010t
 ransport\;froyland2011closing\;froyland2012analytic\;katok2007fifty\;;
 1 ExplicitGroup:unsorted\;0\;best2012atomistic\;carrillo2012fast\;chen
 1996renormalization\;cooke2008preserving\;eberard2007extension\;ge2012
-markov\;givon2004extracting\;meerbach2008sequential\;perreault2000baye
+{Markov}\;givon2004extracting\;meerbach2008sequential\;perreault2000baye
 sian\;wang2012exploring\;;
 1 ExplicitGroup:confined water\;0\;meyer1999liquid\;;
 }
