added conclusion. worrying about the Markovianity of the L(t)

--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -4718,6 +4718,27 @@ year  = {2013},
   publisher={AIP Publishing}
 }
 
+@article{schutte2014markov,
+  title={Markov state models and molecular alchemy},
+  author={Sch{\"u}tte, Christof and Nielsen, Adam and Weber, Marcus},
+  journal={Molecular Physics},
+  number={ahead-of-print},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2013linear,
+  title={Linear response theory and optimal control for a molecular system under non-equilibrium conditions},
+  author={Wang, Han and Hartmann, Carsten and Sch{\"u}tte, Christof},
+  journal={Molecular Physics},
+  volume={111},
+  number={22-23},
+  pages={3555--3564},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
