--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
 
+@ARTICLE{discreteTPT,
+  author = {P. Metzner and Ch. Sch{\"u}tte and E. Vanden-Eijnden},
+  title = {Transition Path Theory for {M}arkov Jump Processes},
+  journal = {Multiscale Modeling and Simulation},
+  year = {2009},
+  volume = {7},
+  pages = {1192--1219},
+  number = {3}
+}
+
 @ARTICLE{BucheteHummer,
   author = {Buchete, Nicaolae V. and Hummer, Gerhard},
   title = {Coarse Master Equations for Peptide Folding Dynamics},
@@ -149,6 +159,14 @@
   year={2014}
 }
 
+@ARTICLE{Eigenvalues,
+  author = {Djurdjevac, N. and Sarich, M. and Sch{\"u}tte, Ch},
+  title = {Estimating the eigenvalue error of {M}arkov State Models},
+  journal = {Multiscale Modeling \& Simulation},
+  year = {2012},
+  volume = {10(1)},
+  pages ={61-81}
+  }
 
 @article{wang2014exploring,
   title={Exploring the conformational dynamics of alanine dipeptide in solution subjected to an external electric field: A nonequilibrium molecular dynamics simulation},
@@ -4722,7 +4740,7 @@ year  = {2013},
   title={Markov state models and molecular alchemy},
   author={Sch{\"u}tte, Christof and Nielsen, Adam and Weber, Marcus},
   journal={Molecular Physics},
-  number={ahead-of-print},
+  volume={ahead-of-print},
   year={2014},
   publisher={Taylor \& Francis}
 }
