--- a/writedown/period.noneq.msm/paper.tex
+++ b/writedown/period.noneq.msm/paper.tex
@@ -277,20 +277,34 @@ matrix of the milestone process \cite{A19-31,schuette2011markov,A19-29} that mod
 the original dynamics between the metastable regions. 
 
 However, since we cannot assume $P$ to satisfy detailed balance, we
-instead follow the approach to non-standard MSMs recently proposed in Ref.~\cite{sarich2014utilizing}.
-It allows to identify the metastable core sets for the
+instead follow the approach to non-standard MSMs recently proposed in Ref.~\cite{sarich2014utilizing} which allows to identify the metastable core sets for the
 non-reversible transition matrix $P$. Assume that this approach leads
-to the $k$ core sets $C_1,\ldots, C_k\subset S$, and we denote $C=S\setminus\cup_j C_j$. Following
-Ref.~\cite{djurdjevac2010markov}, Thm. 3.1, the coarse grained transition
-matrix $\hat{P}$ then has to be computed as follows:
-\begin{enumerate}
-\item For the process associated with $P$ compute the forward and backward committors $q^\fwd_j$ and $q^\bwd_j$  for each core set $C_j$. This can be done by solving the linear equations
+to the $k$ core sets $C_1,\ldots, C_k\subset S$ that are appropriate metastable sets. 
+Following \cite{A19-31,schuette2011markov} the process $(X_m)$ associated with $P$ is coarse grained into the so-called milestone process $(\hat{X}_m)$ in the following way: 
+\begin{itemize}
+\item $\hat{X}_m$ just has $k$ states associated with the sets $C_j$, $j=1,\ldots,k$. 
+\item The sequence of random variables $(\hat{X}_m)$ is defined via the sequence $(X_m)$, i.e., trajectories of $(X_m)$ induce trajectories of $(\hat{X}_m)$: We set $\hat{X}_m=j$ if the last core set that the process $(X_m)$ entered prior to or at time $m$ has been the core set $C_j$.
+\end{itemize}
+Now consider infinitely long trajectory of $(X_m)$. Because of ergodicity we know that the states in this trajectory will be distributed due to the quasi-stationary distribution $\mu$. Based on such an infinitely long trajectory we can consider the probability $q_j^\bwd(i)$ that conditioned on $X_m=i$ the last core set hit has been $C_j$.
+This function is called the backward committor of $(X_m)$ associated with the set $C_j$ and is associated with the milestone process via
+\[
+q^\bwd_j(i)=\prob_\mu(\hat{X}_m=j|X_m=i),
+\] 
+where  the index $\mu$ refers to the fact that $\hat{X}_m$ is distributed due to $\mu$.
+From the last equation we get that the stationary distribution of the milestone process is given by
+\[
+\hat{\mu}(j)=\sum_{i\in S} q^\bwd_j(i)\mu(i),
+\]
+that is, the probability to find $\hat{X}_m=j$ in (infinitely) long trajectories of the milestoning process is $\hat{\mu}(j)$.
+
+Following \cite{discreteTPT} one also has to consider the forward committor $q^\fwd_j(i)$ identical to the probability  that conditioned on $X_m=i$ the next core set to be hit will be $C_j$.
+The forward and backward committors $q^\fwd_j$ and $q^\bwd_j$  for each core set $C_j$ can be computed from $P$ by solving the linear equations \cite{discreteTPT}
 \begin{align}
 (P-\id) q^\fwd_j(i) & =  0, \quad i\in C\label{qfwd}\\
 q^\fwd_j(i) & =  1,\quad i\in C_j\nonumber\\
 q^\fwd_j(i) & =  0,\quad i\in C_l,l\not=j\nonumber
 \end{align}
-and
+where $C=S\setminus\cup_j C_j$, and
 \begin{align}
 (P^b-\id) q^\bwd_j(i) & =  0, \quad i\in C\label{qbwd}\\
 q^\bwd_j(i) & =  1,\quad i\in C_j\nonumber \\
@@ -298,55 +312,52 @@ q^\bwd_j(i) & =  0,\quad i\in C_l,l\not=j\nonumber
 \end{align}
 where $P^b$ denotes the transition matrix of the time-reversed process
 given by $P^b_{ji}=\mu_i P_{ij}/\mu_j$.
-\item Compute $\hat{\mu}(j)=\sum_{i\in S} q^\bwd_j(i)\mu(i)$,
-  which is the invariant measure of the MSM
-\item Construct the MSM transition matrix $\hat{P}$ according to
+
+Following
+Ref.~\cite{djurdjevac2010markov}, Thm. 3.1, the one-step transition
+matrix $\hat{\vect P}$ associated with the milestone process $\hat{X}_m)$ is given by
   \begin{align}
     \label{eq:msm-tmatrix-00}
     \begin{split}      
-    \hat{\vect P}_{jk}
+    \hat{\vect P}_{jl}
     = &
     \frac{1}{\hat{\mu}(j)}
-    \langle (\vect P^b - \id) q^\bwd_j,q^\fwd_k \rangle_\mu,\qquad j\not= k, \\    %\label{eq:msm-tmatrix-01}
+    \langle (\vect P^b - \id) q^\bwd_j,q^\fwd_l \rangle_\mu,\qquad j\not= l, \\    %\label{eq:msm-tmatrix-01}
     \hat{\vect P}_{jj}
     =&
-    1-\sum_{k\not=j} \hat{\vect P}_{jk}
+    1-\sum_{l\not=j} \hat{\vect P}_{jl}
     \end{split}
   \end{align}
 where the inner product is defined by
-$\langle u,v \rangle_\mu=\sum_{i\in S} u_i v_i \mu_i$.
-\end{enumerate}
+$\langle u,v \rangle_\mu=\sum_{i\in S} u_i v_i \mu_i$. More precisely, we have
+\begin{equation}\label{hatP_prob}
+\hat{\vect P}_{jl}=\prob_\mu\Big(\hat{X}_{m+1}=l\vert \hat{X}_m=j\Big).
+\end{equation}
+In general the milestone process need not be a Markov process. The results in \cite{A1-31,sarich2014utilizing} show, however, that it is an approximate Markov process as long as the core sets are proper metastable sets, i.e., if the typical timecale on which $(X_m)$ leaves $C$ is much smaller than the typical expected hitting times between the core sets.
+Thus, by taking $\hat{P}$ as our MSM transition matrix, we introduce an additional modelling error that is the smaller the more metastable the core sets are.
+With this MSM transition matrix, we can define the MSM kinetics:
+If we start from some initial probability $\hat{p}(l,0)$ of being in state $l$ at time $t=0$ then its evolution $\hat{p}(l,t)$ in time is discrete in multiples of period $T$ and given by
+\recheck{
+\begin{equation}\label{eq:num-29}
+\hat{p}(l,T)=\sum_j \hat{p}(j,0)\,\,\hat{\vect P}_{jl}.
+\end{equation}}
+In our approach $p(j,mT)$ is a good approximation of $\prob(\hat{X}_m=j)$.
 
-\noindent\textbf{Remark 1:}
-Alternatively, the forward and
-backward committors can be \emph{sampled} by means of the following procedure: The forward
-committor $q^\fwd_j(i)$ is defined as the probability of visiting coreset
-$C_j$ next conditioned on being at state $i$.  The
-backward committor $q^\bwd_j(i)$  is defined as the probability
-of last coming from $C_j$ conditioned on being at state $i$.
+\textbf{Remark 1:} Our definition of the milestoning process in terms of the process $(X_m)$ generated by $P$ guarantees that we can directly compute $\hat{P}$ via (\ref{hatP_prob})  from trajectories of $(X_m)$ without computing the committor functions. 
+This is of importance if the spatial discretization underlying $(X_m)$ is fine enough, because then the kinetics of $(X_m)$
+approximates the original kinetics of $(x_{mT})$ so that we can directly compute   $\hat{P}$ via (\ref{hatP_prob})  from NEMD trajectories without computing $P$ first (which substantially simplified the MSM building if the core sets are already known).
 
-% \subsection{Building the Markov State Model from the NEMD simulation}
-\noindent\textbf{Remark 2:}
-Sometimes, it is not easy to have an explicit expression for the committors, however, we
-can still build the MSM by using the following procedure: Firstly compute the
-matrixes $\hat T$ and $\hat M$ by
-\begin{align}\label{eq:msm-ht}
-  \hat M_{jk} &= P [\,h_{mT}(C_k) < h_{mT}(\cup_{l\neq k}C_l) \,\vert\, \hat x_{mT} = j\,],\\\label{eq:msm-hm}
-  \hat T_{jk} &= P [\,h_{mT+T}(C_k) < h_{mT+T}(\cup_{l\neq k}C_l) \,\vert\, \hat x_{mT} = j\,],
-\end{align}
-where $\hat x_{mT}$ is milestone process corresponding to the NEMD trajectory $x_{mT}$ (notice here
-only integral periods $mT$ along the NEMD trajectories are used for building the milestone process).
-In Eq.~\eqref{eq:msm-ht} and \eqref{eq:msm-hm}, the time parameterized first hitting time of  set $A$ is defined by:
-\begin{align}
-  h_{t}(A) = \inf_{s\geq t}\{ s : x_s \in A \}.
-\end{align}
-It can be shown that (see Appendix~\ref{sec:app-prove} for details):
+\textbf{Remark 2:}
+Following \cite{A19-31} we can also define another pair of stochastic MSM matrices: 
 \begin{align}\label{eq:msm-ht-1}
   \hat T_{jk} &= \frac{\langle q_j^\bwd, P q_k^\fwd \rangle_\mu}{\hat \mu(j)},\\\label{eq:msm-hm-1}
-  \hat M_{jk} &= \frac{\langle q_j^\bwd, q_k^\fwd \rangle_\mu}{\hat \mu(j)}.
+  \hat M_{jk} &= \frac{\langle q_j^\bwd, q_k^\fwd \rangle_\mu}{\hat \mu(j)},
 \end{align}
-% \recheck{We may need to write why do these formula works, because in literature it is only available for reversible processes.}
-Therefore we have
+that are connected to $\hat{P}$ by the following identity
+\[
+\hat{P}=\hat{T}-\hat{M}+\id,
+\]
+That can be seen by means of direct computation: For the off-diagonal entries we have
 \begin{align}\label{eq:msm-tmp26}
   \hat T_{ij} - \hat M_{ij}
   = \frac{\langle q_j^\bwd, P q_k^\fwd \rangle_\mu}{\hat \mu(j)}
@@ -354,24 +365,20 @@ Therefore we have
   = \frac{\langle (P^b - \id) q_j^\bwd, q_k^\fwd \rangle_\mu}{\hat \mu(j)}
   = \hat P_{jk}, \quad j\neq k
 \end{align}
-By Eq.~\eqref{eq:msm-ht} and \eqref{eq:msm-hm}, we have $\sum_i\hat M_{ij} = \sum_i\hat T_{ij} = 1$, then
-$\sum_k(\hat M_{jk}- \hat T_{jk}) = 0$. By the second line of \eqref{eq:msm-tmatrix-00}, $\sum_k\hat P_{jk} = 1$, so using \eqref{eq:msm-tmp26} we have
-$\hat T_{jj} - \hat M_{jj} + 1 = \hat P_{jj}$.
-In the matrix expression the MSM transition matrix $\hat P$ is given by
-\begin{align}\label{eq:msm-tmatrix-10}
-  \hat P = \hat T - \hat M + \id
-\end{align}
+Stochasticity yields
+$\hat T_{jj} - \hat M_{jj} + 1 = \hat P_{jj}$ for the diagonal entries.  Furthermore, as shown in the Appendix $\hat{T}$ as well as $\hat{M}$ can be computed from trajectories without need to have the committors. 
+The importance of the pair $\hat{T}$ and $\hat{M}$ for MSM building comes from the following observation: The main NEMD relaxation timescales are given by the dominant eigenvalues of $P$ \cite{A19-31, A19-1}.
+These dominant eigenvalues can be approximated by discretizing the related eigenvalue problem $Pu=\lambda u$ by means of a Galerkin approximation with the finite dimensional ansatz space 
+spanned by the forward committors $q^+_j$, $j=1,\ldots,k$ together  with the finite dimensional test function space spanned by the backward committors $q^-_j$, $j=1,\ldots,k$ (test functions multiplied from the left by the inner product $\langle\cdot,\cdot\rangle_\mu$). The thus discretize eigenproblem takes the form  of a generalized eigenproblem
+\[
+\hat{T}\hat{u}=\hat{\lambda}\hat{M}\hat{u}.
+\]
+For the reversible case it is known that its $k$ eigenvalues $\hat{\lambda}$ are very good approximation of the dominant eigenvalues $\lambda$ of the original problem if the core sets are proper metastable sets \cite{Eigenvalues}. Whether this is true for the non-reversible case is not known yet, but if the deviation from reversibility is weak and the dominant eigenvalues of $P$ are real-valued then the results should hold analogously, see \cite{A19-31}, Thm. 4.19. 
+
+The pair $\hat{T}$ and $\hat{M}$, or the matrix $\hat{M}^{-1}\hat{T}$ (if all of its entries are positive such that it is a stochastic matrix), thus can also be taken as MSM transition matrices. In the case of  $\hat{T}$ and $\hat{M}$ the MSM modelling error results from Galerkin discretization, while the MSM modelling error of $\hat{P}$ results from ignoring the potential non-Markovianity of $\hat{X}_m$. The lesson learnt in the reversible case are that $\hat{P}$ is better suited to approximate the molecular kinetics on large timescales while $\hat{T}$ and $\hat{M}$ should be used for approximating eigenvalues and long relaxation timescales.
+
 % Given coresets $\{C_1, \cdots, C_k\}$, the procedure \eqref{eq:msm-ht}--\eqref{eq:msm-tmatrix-10}
 % If assuming that we have the coresets $\{C_1, \cdots, C_k\}$, no matter how they are identified,
-In constrast to Eq.~\eqref{eq:msm-tmatrix-00}, which needs the intermediate spacial and
-temporal discretization (i.e.~the Floquet transition matrix $P$), 
-Eq.~\eqref{eq:msm-ht}, \eqref{eq:msm-hm} and \eqref{eq:msm-tmatrix-10} allows a direct derivation of the MSM from the original NEMD
-trajectories, which substantially simplified the MSM building.
-However, in the present paper, we present both the approachs,
-because the former contains more information regarding the original dynamics in $P$ and $L(t)$ than in $\hat P$.
-Moreover, the coreset identification may need a good spacial discretization to the original NEMD trajectories, which is
-usually consisten with that used to go from $\ml(T)$ to $L(t)$. In the end, the MSM
-built from both approachs should be consistent, taking no account of the statistical uncertainty in the samplings.
 
 
 
@@ -746,18 +753,34 @@ MSM out of the committors of the  discretized process.
 Following the process described in Sec.~\ref{sec:build-msm}, we are able to build a 
 three state MSM for the externally driven alanine dipeptide system,
 where the quasi-stationary probability distribution $\mu$, the three core sets, and the forward and backward committors are
-estimated as described above, and the MSM transition matrix $\hat P$ is then evaluated using Eq.~\eqref{eq:msm-tmatrix-00}.
-Alternatively, the MSM  transition matrix $\hat P$ is calculated directly from the NEMD trajectories by Eq.~\eqref{eq:msm-tmatrix-10}.
-The leading eigenvalues of $P=\myphi^T(T)$ are compared with those of $\hat P$ in
+estimated as described above, and the MSM transition matrices $\hat P$, $\hat{M}$, and $\hat{T}$ is then evaluated using Eq.~\eqref{eq:msm-tmatrix-00}and \eqref{eq:msm-ht-1}.
+Alternatively, the MSM  transition matrix $\hat P$ is calculated directly from the NEMD trajectories using Eq.~\eqref{hatP_prob} (very good agreement with the one computed from the committors).
+The leading eigenvalues of $P=\myphi^T(T)$ are compared with those of $\hat P$ and $\hat{M}^{-1}\hat{T}$ in
 Tab.~\ref{tab:tmp1}.
 Without surprising, the two approaches for MSM building are consitent.
 The MSM is able to accurately reproduce
 the largest non-trivial eigenvalue, which means a precise reproduction
 of the longest non-trivial implied time-scale. The accuracy of the second non-trivial
-time-scale is not as good as the first, but is still acceptable. The reason
+time-scale is not as good as the first, but is still acceptable (even good for $\hat{M}^{-1}\hat{T}$). The reason
 for the lower accuracy is that
 the corresponding time scale is 26.5~ps (calculated by $-T/\log(\lambda_2)$),
 which is NOT significantly longer than the temporal resolution given by the period $T=10$~ps of the external driving force.
+Numerically the two MSM transition matrices are:
+\[
+\hat{M}^{-1}\hat{T}=\left(\begin{array}{ccc}
+   0.866 &   0.128 &   0.006 \\
+    0.183  &  0.783  &  0.034\\
+    0.018   & 0.067 &   0.915
+\end{array}
+\right),\qquad \hat{P}=\left(\begin{array}{ccc}
+   0.888 &   0.105 &   0.007 \\
+    0.149  &  0.822  &  0.029\\
+    0.021   & 0.055 &   0.923
+\end{array}
+\right),
+\]
+from which we see that the longest relaxation timescale results from  the dominant metastability of the left-handed alpha-helix conformations of the peptide.
+ 
 It is worth noting that although the discretized process $\tilde X_m$ is irreversible,
 the MSM built out of it is almost reversible:
 The magnitude of the anti-symmetric part of the
@@ -766,13 +789,13 @@ matrix $\textrm{diag}(\hat \mu)\cdot \hat P$ is only of order $10^{-4}$.
 \begin{table}
   \centering
   \caption{
-    Comparison of second and third eigenvalues of $\vect P$ and $3\times 3$ MSM transition matrix $\hat{P}$ from two approaches.
+    Comparison of second and third eigenvalues of $\vect P$ and $3\times 3$ MSM transition matrices $\hat{P}$ and $\hat{M}^{-1}\hat{T}$, respectively, from the two different MSM approaches.
   }
-  \begin{tabular*}{0.5\textwidth}{@{\extracolsep{\fill}}cc rrr}\hline\hline
-      & method &  $\lambda_2$ & $\lambda_3$ & $\lambda_4$ \\\hline
-    $P$         & --         &0.907  &0.686 & 0.553       \\
-    $\hat P$    &\eqref{eq:msm-tmatrix-00} & 0.911  &0.724 & --       \\
-    $\hat P$    &\eqref{eq:msm-tmatrix-10} & 0.909  &0.712 & --       \\
+  \begin{tabular*}{0.5\textwidth}{@{\extracolsep{\fill}}c rrr}\hline\hline
+      &  $\lambda_2$ & $\lambda_3$ & $\lambda_4$ \\\hline
+    $P$                 &0.907  &0.686 & 0.553       \\
+    $\hat P$     & 0.911  &0.724 & --       \\
+    $\hat{M}^{-1}\hat{T}$    & 0.903  &0.662 & --       \\
     \hline\hline
   \end{tabular*}
   \label{tab:tmp1}
@@ -815,10 +838,8 @@ Then
  =
    \sum_{l=1}^k \alpha_l \,\hat p (l, t), \label{eq:num-28}
 \end{align}
-where the time-dependent probability $\hat{p}(i,t)$ of being assigned to MSM macrostate $i$ at time $t$ can be computed  by means of the MSM via simple matrix multiplications:
-\begin{align}\label{eq:num-29}
-  \hat p(i, t+T) = \sum_{j\in S} \hat p(j,t)\hat P_{ji}.
-\end{align}
+where the time-dependent probability $\hat{p}(i,t)$ of being assigned to MSM macrostate $i$ at time $t$ can be computed  by means of the MSM via simple matrix multiplications using (\ref{eq:num-29}).
+
 In Fig.~\ref{fig:num-7} we compare the numerical calculation of $\hat p (l, mT), \ m\in\mathbb N$ from NEMD and MSM calculations.
 In the NEMD case, the backward committor and the probability density $\hat p (l, mT) = \sum_{i\in S}  q^\bwd_l(i)  p(i,mT) $
 are estimated directly from the
@@ -1176,10 +1197,11 @@ From Eq.~\eqref{eqn:tmp18} we have
 % \end{align}
 
 
-\section{Proves for Equations~\eqref{eq:msm-ht-1} and \eqref{eq:msm-hm-1} }
+\section{Computation of $\hat{T}$ and $\hat{M}$ directly from trajectories}
 \label{sec:app-prove}
 
-We firstly define $\hat q^\bwd_j (i) = P (X_t = i \vert \hat X_t =
+In order to show how to compute $\hat{T}$ and $\hat{M}$ directly from trajectories let us start by denoting the first hitting time of set $A$ starting at time $t$ by $h_t(A)$.
+In addition we define $\hat q^\bwd_j (i) = P (X_t = i \vert \hat X_t =
 j)$, and always assume $t = mT$. Then due to the Bayes' Theorem we have
 \begin{align}
   \hat q^\bwd_j (i) =
@@ -1203,14 +1225,12 @@ Then
   \hat q^\bwd_j(i)  \\
   &=
   \sum_{i=1}^n
-  q^\fwd_k(i) \frac{q^\bwd_j(i) \mu(i)}{\hat \mu(i)} \\
-  &=
-  \frac{\langle q_j^\bwd, q_k^\fwd\rangle_\mu}{\hat \mu(j)}
+  q^\fwd_k(i) \frac{q^\bwd_j(i) \mu(i)}{\hat \mu(i)} =\frac{\langle q_j^\bwd, q_k^\fwd\rangle_\mu}{\hat \mu(j)}={\hat M}_{jk}
 \end{align*}
-The third equation holds because of the Markovianity of the process $X_t$.
-The fourth equation is due to the definition of the forward committor.
-This proves Eq.~\eqref{eq:msm-ht-1}.
-To prove Eq.~\eqref{eq:msm-hm-1}, we firstly need
+where the third equation holds because of the Markovianity of the process $X_t$, and the fourth equation is due to the definition of the forward committor.
+The interpretation of the result is that when starting with the milestone process in state $j$ we have to determine the fraction of all trajectories that hit core set $C_k$ first of all core sets to estimate $\hat{M}_{jk}$.
+
+To see the same for $\hat{T}$, we first need
 \begin{align*}
   P & [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l) \,\vert\, X_t = i\,]\\
   &=
@@ -1224,24 +1244,37 @@ To prove Eq.~\eqref{eq:msm-hm-1}, we firstly need
   & =
   \sum_{l=1}^n
   {P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l) \vert X_{t+T} = l\,]}
-  {P( X_{t+T} = l \vert X_t = i)} \\
-  &=
-  \sum_{l=1}^n
+  {P( X_{t+T} = l \vert X_t = i)}  = \sum_{l=1}^n
   q^\fwd_k(l) P_{il}
 \end{align*}
 We used the Markovianity of $X_T$ at the third equation,
-and the time-homogeneity at the fourth equation.
-Therefore, following the same procedure proving Eq.~\eqref{eq:msm-ht-1}, we have
+and the time-homogeneity in the fourth equation.
+Therefore, following the same procedure as before we have
 \begin{align*}
-  P& [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l) \,\vert\, \hat X_t = j\,]\\
-  &=
+  P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l) \,\vert\, \hat X_t = j\,]=
   \sum_{i=1}^n\sum_{l=1}^n
   q^\fwd_k(l) P_{il}
-  \frac{q^\bwd_j(i) \mu(i)}{\hat \mu(i)} \\
-  &=
-  \frac{\langle q_j^\bwd, P q_k^\fwd\rangle_\mu}{\hat \mu(j)}  
+  \frac{q^\bwd_j(i) \mu(i)}{\hat \mu(i)} = \frac{\langle q_j^\bwd, P q_k^\fwd\rangle_\mu}{\hat \mu(j)}  = {\hat T}_{jk}
 \end{align*}
-This proves Eq.~\eqref{eq:msm-hm-1}.
+Thus, when starting with the milestone process in state $j$ at some time $t$ we have to determine the fraction of all trajectories of length at least $T$ that hit core set $C_k$ first of all core sets to estimate $\hat{T}_{jk}$.
+
+\section{The equivalence}
+\begin{align*}
+  \hat T_{jk} &=
+  P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l) \,\vert\, \hat X_t = j\,]\\
+  &=
+  \frac{P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l), \hat X_t = j\,] }{P(\hat X_t = j)}\\
+  & =
+  \sum_l \frac{P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l), \hat X_{t+T} = l, \hat X_t = j\,] }{P(\hat X_t = j)}\\
+  & =
+  \sum_l P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l)\vert \hat X_{t+T} = l, \hat X_t = j\,] \hat P_{jl}\\  
+  & =
+  \sum_l P [\,h_{t+T}(C_k) < h_{t+T}(\cup_{l\neq k} C_l)\vert \hat X_{t+T} = l\,] \hat P_{jl}\\
+  &= 
+  \sum_l  \hat P_{jl}\hat M_{lk}
+\end{align*}
+  
+
 
 \bibliography{ref}{}
 \bibliographystyle{unsrt}
